--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Timer</title>
+  <title><%= title %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
-<body>
+    <body>
+        <div>
+          <%= render 'layouts/header' %>
+        </div>
 
-<%= yield %>
+        <% flash.each do |key, value| %>
+            <div class="flash <%= key %>"><%= value %></div>
+        <% end %>
 
-</body>
+        <%= yield %>
+
+        <div>
+          <%= render 'layouts/footer' %>
+        </div>
+
+        <%= debug(params) if Rails.env.development? %>
+    </body>
 </html>
