--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,9 @@
+<h1>Edit user</h1>
+
 <div class="margin10">
     <%= form_for(@user) do |f| %>
-
-      <%= render 'shared/error_messages', :object => f.object %>
-
-      <div class="field">
+        <%= render 'shared/error_messages', :object => f.object %>
+        <div class="field">
           <%= f.label :name %><br />
           <%= f.text_field :name %>
         </div>
@@ -20,7 +20,7 @@
           <%= f.password_field :password_confirmation %>
         </div>
         <div class="actions">
-          <%= f.submit "Sign up" %>
+          <%= f.submit "Update" %>
         </div>
     <% end %>
 </div>
