--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <div class="margin10">
+    <div><%= link_to "Settings", edit_user_path(current_user) %></div>
     <%= @user.name %>, <%= @user.email %>
 </div>
