--- a/app/views/works/_work.html.erb
+++ b/app/views/works/_work.html.erb
@@ -1,5 +1,6 @@
 <tr>
-  <td><%= work.time %> </td>
+  <td><%= work.from %> </td>
+  <td><%= work.to %> </td>
   <td><%= work.duration %> </td>
   <td><%= work.description %> </td>
 </tr>
