--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,7 +3,7 @@ html {margin:0;padding:0;border:0;}
 body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, dialog, figure, footer, header, hgroup, nav, section {margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure, dialog, footer, header, hgroup, menu, nav, section {display:block;}
 body {line-height:1.5;background:white;}
-table {border-collapse:separate;border-spacing:0;}
+table {border-collapse:collapse;border-spacing:0;}
 caption, th, td {text-align:left;font-weight:normal;float:none !important;}
 table, th, td {vertical-align:middle;}
 blockquote:before, blockquote:after, q:before, q:after {content:'';}
@@ -23,6 +23,8 @@ h2 {font-size: 150%}
 h3 {font-size: 140%}
 h4 {font-size: 130%}
 h5 {font-size: 120%}
+table, td {border: 1px black solid}
+td {padding: 0px 5px}
 .round { -moz-border-radius:    10px; -webkit-border-radius: 10px; border-radius: 10px; }
 .margin10 {margin: 10px}
 
