--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div class="margin10">
 
     <div><%= link_to "Settings", edit_user_path(current_user) %></div>
+    <div><%= link_to "Categories", category_path(current_user) %></div>
+
     <div>Things that was done today</div>
     <% unless @user.works.empty? %>
         <table class="works" summary="User works">
