ready with category model

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -2,5 +2,6 @@
   <td><%= category.name %> </td>
   <td><%= category.pcategory %> </td>
   <td><%= category.scope %> </td>
+  <td><%= link_to "edit", edit_category_path(category) %></td>
   <td><%= link_to "delete", category, :method => :delete, :confirm => "You sure?", :title => category.name %></td>
 </tr>
