--- a/app/views/works/_work.html.erb
+++ b/app/views/works/_work.html.erb
@@ -3,5 +3,10 @@
   <td><%= work.to %> </td>
   <td><%= work.duration %> </td>
   <td><%= work.description %> </td>
+  <td>
+    <% for category in work.categories %>
+        <%= category.name + '|' %>
+       <% end  %>
+  </td>
   <td><%= link_to "delete", work, :method => :delete, :confirm => "You sure?", :title => work.description %></td>
 </tr>
