--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,30 +12,11 @@
 
     <br>
 
-    <%= form_for @work do |f| %>
-      <%= render 'shared/error_messages', :object => f.object %>
-      <div class="field">
-        <label>Start</label>
-        <%= time_select("work", "from", {:minute_step => 10}) %>
-        &nbsp;&nbsp;
-        <label>Finish</label>
-        <%= time_select("work", "to", {:minute_step => 10}) %>
-      </div>
-      <div class="field">
-        <%= f.label :description %><br />
-        <%= f.text_area :description, :size=>"43x4" %>
-      </div>
-
-      <% for category in @user.categories %>
-          <div>
-            <%= check_box_tag "work[category_ids][]", category.id, false %>
-            <%= category.name %>
-          </div>
-      <% end %>
-
-      <div class="actions">
-        <%= f.submit "Add" %>
-      </div>
+    <%= form_for(@work) do |f| %>
+        <%= render 'works/fields', :f => f %>
+        <div class="actions">
+          <%= f.submit "Add" %>
+        </div>
     <% end %>
 
 </div>
