--- a/app/views/works/_work.html.erb
+++ b/app/views/works/_work.html.erb
@@ -8,5 +8,6 @@
         <%= category.name + '|' %>
        <% end  %>
   </td>
+  <td><%= link_to "edit", edit_work_path(work) %></td>
   <td><%= link_to "delete", work, :method => :delete, :confirm => "You sure?", :title => work.description %></td>
 </tr>
