working with sources model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
     <div><%= link_to "Settings", edit_user_path(current_user) %></div>
     <div><%= link_to "Categories", category_path(current_user) %></div>
     <div><%= link_to "Tags", tag_path(current_user) %></div>
+    <div><%= link_to "Sources", source_path(current_user) %></div>
 
     <div>Things that was done today</div>
     <% unless @user.works.empty? %>
