--- a/app/views/sources/edit.html.erb
+++ b/app/views/sources/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Sources#edit</h1>
-<p>Find me in app/views/sources/edit.html.erb</p>
+<h1>Edit source</h1>
+
+<div class="margin10">
+  <%= form_for(@source) do |f| %>
+      <%= render 'fields', :f => f %>
+      <div class="actions">
+        <%= f.submit "Update" %>
+      </div>
+  <% end %>
+</div>
