--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -5,6 +5,7 @@
         <%= tag.name + '|' %>
     <% end  %>
   </td>
+  <td><%= source.work_id %> </td>
   <td><%= link_to "edit", edit_source_path(source) %></td>
   <td><%= link_to "delete", source, :method => :delete, :confirm => "You sure?", :title => "Delete source" %></td>
 </tr>
