--- a/app/views/sources/edit.html.erb
+++ b/app/views/sources/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="margin10">
   <%= form_for(@source) do |f| %>
-      <%= render 'fields', :f => f %>
+      <%= render 'fields_edit', :f => f %>
       <div class="actions">
         <%= f.submit "Update" %>
       </div>
