--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title><%= title %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
 </head>
     <body>
-        <div>
+        <div class="container">
+
           <%= render 'layouts/header' %>
-        </div>
 
-        <% flash.each do |key, value| %>
-            <div class="flash <%= key %>"><%= value %></div>
-        <% end %>
 
-        <%= yield %>
+            <% flash.each do |key, value| %>
+                <div class="flash <%= key %>"><%= value %></div>
+            <% end %>
 
-        <div>
-          <%= render 'layouts/footer' %>
-        </div>
+            <%= yield %>
+
+            <div>
+              <%= render 'layouts/footer' %>
+            </div>
 
         <%= debug(params) if Rails.env.development? %>
+        </div>
     </body>
 </html>
