--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,24 +9,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
+  <style type="text/css">
+      body {
+          padding-top: 60px;
+          padding-bottom: 40px;
+      }
+      .sidebar-nav {
+          padding: 9px 0;
+      }
+  </style>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
 
           <%= render 'layouts/header' %>
 
-
-            <% flash.each do |key, value| %>
-                <div class="flash <%= key %>"><%= value %></div>
+          <div class="row-fluid">
+            <% if signed_in? %>
+                <%= render 'layouts/sidebar_signin' %>            
+            <% else %>
+                <%= render 'layouts/sidebar' %>
             <% end %>
 
-            <%= yield %>
+            <div class="span10">
+                <% flash.each do |key, value| %>
+                    <div class="flash <%= key %>"><%= value %></div>
+                <% end %>
 
-            <div>
-              <%= render 'layouts/footer' %>
-            </div>
+                <%= yield %>
 
+            </div>  <!-- end "span10" -->
+          </div> <!-- end  "row-fluid" -->
+
+          <hr>
+
+          <%= render 'layouts/footer' %>
+        </div><!-- end  "container-fluid" -->
+        
         <%= debug(params) if Rails.env.development? %>
-        </div>
+    
     </body>
 </html>
