--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,3 +1,63 @@
-<div>
-  <%= link_to "Sign up now!", register_path, :class => "signup_button round" %>
+<div class="hero-unit">
+  <h1>Hello, I'm time tracker!</h1>
+  <p>
+     You don't know where your time is? You just wanted to do something usefull,
+     but found yourself on some site looking nice fotos or videos.
+     I will help you to track your activities and help you with organizing.
+  </p>
+  <p>
+    <%= link_to "Sign up now!", register_path, :class => "btn btn-primary btn-large" %>
+  </p>
+</div>
+<div class="row-fluid">
+  <div class="span4">
+    <h2>Tracking</h2>
+    <p>
+      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>
+      <a class="btn" href="#">View details</a>
+    </p>
+  </div>
+  <div class="span4">
+    <h2>Reporting</h2>
+    <p>
+      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>
+      <a class="btn" href="#">View details</a>
+    </p>
+  </div>
+  <div class="span4">
+    <h2>Saving</h2>
+    <p>
+      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>
+      <a class="btn" href="#">View details</a>
+    </p>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="span4">
+    <h2>Search</h2>
+    <p>
+      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>
+      <a class="btn" href="#">View details</a>
+    </p>
+  </div>
+  <div class="span4">
+    <h2>Resources</h2>
+    <p>
+      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>
+      <a class="btn" href="#">View details</a>
+    </p>
+  </div>
+  <div class="span4">
+    <h2>Routines</h2>
+    <p>
+      Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+    <p>
+      <a class="btn" href="#">View details</a>
+    </p>
+  </div>
 </div>
