adding layout for works

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -3,7 +3,7 @@
   <p>
      You don't know where your time is? You just wanted to do something usefull,
      but found yourself on some site looking nice fotos or videos.
-     I will help you to track your activities and help you with organizing.
+     I will help you to track your activities and to see whats going on.
   </p>
   <p>
     <%= link_to "Sign up now!", register_path, :class => "btn btn-primary btn-large" %>
