--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,19 +10,17 @@
       <div class="nav-collapse">
         <ul class="nav">
           <% if signed_in? %>
-              <li class="active"><%= link_to "Home", user_path(current_user) %></li>
+              <li class="<%= active_menu?('users#show', false) %>"><%= link_to "Home", user_path(current_user) %></li>
           <% else %>
-              <li class="active"><%= link_to "Home", root_path %></li>
+              <li class="<%= active_menu?('main#home', false)%>"><%= link_to "Home", root_path %></li>
           <% end %>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="<%= active_menu?('main#about', false)%>"><%= link_to "About", {:action => 'about', :controller => 'main'} %></li>
+          <li class="<%= active_menu?('main#contact', false)%>"><%= link_to "Contact", {:action => 'contact', :controller => 'main'} %></li>
         </ul>
         <ul class="nav pull-right">
             <% if signed_in? %>
                 <!--<p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>-->
                 <li><%= link_to "Sign out", logout_path, :method => :delete %></li>
-            <% else %>
-                <li><%= link_to "Sign in", login_path %></li>
             <% end %>
         </ul>
       </div><!--/.nav-collapse -->
