--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,8 +1,13 @@
   <div class="span2">
+
+    <% if flash[:session_notice] %>
+        <div class="alert alert-error"><%= flash[:session_notice] %></div>
+    <% end %>
+
     <% form_for(:session, :url => sessions_path) do |f| %>
         <%= f.text_field :email, :class => 'input-medium', :placeholder=>'Email' %>
         <%= f.password_field :password, :class => 'input-medium', :placeholder=>'Password' %>
         <%= f.submit "Sign in", :class=>'btn' %>
     <% end %>
-    <p>New on the site? To get aware about how your time was spent, please <a href="#">register</a></p>
+    <p>New on the site? To get aware about how your time was spent, please <%= link_to "register", register_path %> </p>
   </div>
