--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="alert alert-info"> Timeline will be here</div>
 
-<% unless @user.works.empty? %>
+<% unless @works.empty? %>
     <table class="table table-striped">
       <thead>
           <tr>
