--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title><%= title %></title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <% javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'jquery-1.7.2.min', 'rails', 'bootstrap','application' %>
   <%= csrf_meta_tag %>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
