--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,17 +1,32 @@
 <%= render 'shared/error_messages', :object => f.object %>
-<div class="field">
-  <%= f.label :name %><br />
-  <%= f.text_field :name %>
+
+<legend>Please fill in registration form</legend>
+
+<div class="control-group">
+  <%= f.label :name %>
+  <div class="controls">
+    <%= f.text_field :name, :class=>"input-xlarge" %>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :email %><br />
-  <%= f.text_field :email %>
+
+<div class="control-group">
+  <%= f.label :email %>
+  <div class="controls">
+    <%= f.text_field :email, :class=>"input-xlarge" %>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :password %><br />
-  <%= f.password_field :password %>
+
+<div class="control-group">
+  <%= f.label :password %>
+  <div class="controls">
+    <%= f.password_field :password, :class=>"input-xlarge" %>
+  </div>
 </div>
-<div class="field">
-  <%= f.label :password_confirmation, "Confirmation" %><br />
-  <%= f.password_field :password_confirmation %>
+
+
+<div class="control-group">
+  <%= f.label :password_confirmation, "Confirmation" %>
+  <div class="controls">
+    <%= f.password_field :password_confirmation, :class=>"input-xlarge" %>
+  </div>
 </div>
