--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,8 @@
 <%= form_for(@user, :html => { :class => "well"}) do |f| %>
     <fieldset>
 
+      <legend>Please fill in registration form</legend>
+
       <%= render 'fields', :f => f %>
 
       <div class="form-actions">
