--- a/app/views/categories/_fields.html.erb
+++ b/app/views/categories/_fields.html.erb
@@ -1,13 +1,7 @@
 <%= render 'shared/error_messages', :object => f.object %>
-<div class="field">
-  <%= f.label :name %><br />
-  <%= f.text_field :name %>
-</div>
-<div class="field">
-  <%= f.label "Parent category" %><br />
-  <%= collection_select(:category, :pcategory, current_user.categories, :id, :name, options ={:prompt => "-Select a parent category"})%>
-</div>
-<div class="field">
-  <%= f.label :scope %><br />
-  <%= f.text_field :scope %>
-</div>
+
+<%= f.text_field :name, {:placeholder=>"Category name"} %>
+
+<%= collection_select(:category, :pcategory, current_user.categories, :id, :name, options ={:prompt => "--Select parent category--"})%>
+
+<%= f.text_field :scope, {:placeholder=>"Scope"} %>
