--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <%= link_to ">>", user_path(current_user, :d=>day_after(@current_day)), :class=>"btn btn-mini " %>
 </div>
 
-<div class="alert alert-info"> Timeline will be here</div>
+<%= render 'shared/timeline' %>
 
 <% unless @works.empty? %>
     <table class="table table-striped">
