--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,10 +1,15 @@
-<h1>Edit activity</h1>
+<%= render 'shared/timeline' %>
 
-<div class="margin10">
-  <%= form_for(@work) do |f| %>
+<%= form_for(@work, :html => { :class => "well"}) do |f| %>
+    <fieldset>
+
+      <legend>Please update activity information</legend>
+
       <%= render 'fields_edit', :f => f %>
-      <div class="actions">
-        <%= f.submit "Update" %>
+
+      <div class="form-actions">
+        <%= f.submit "Update", :class => "btn btn-primary" %>
       </div>
-  <% end %>
-</div>
+
+    </fieldset>
+<% end %>
