--- a/app/views/tags/_fields.html.erb
+++ b/app/views/tags/_fields.html.erb
@@ -1,5 +1,3 @@
 <%= render 'shared/error_messages', :object => f.object %>
-<div class="field">
-  <%= f.label :name %><br />
-  <%= f.text_field :name %>
-</div>
+
+<%= f.text_field :name, {:placeholder=>"Enter new tag"} %>
