add multiple selection of category for work

--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -1,5 +1,5 @@
 <div style="padding: 5px;">
-    <%= link_to "Create resource", new_source_path, :class => "btn btn-primary" %>
+    <%= link_to "Add content", new_source_path, :class => "btn btn-primary" %>
 </div>
 
 <% unless @user.sources.empty? %>
@@ -9,5 +9,5 @@
 <% end %>
 
 <div>
-    <%= link_to "Create resource", new_source_path, :class => "btn btn-primary" %>
+    <%= link_to "Add content", new_source_path, :class => "btn btn-primary" %>
 </div>
