--- a/app/views/sources/_fields_edit.html.erb
+++ b/app/views/sources/_fields_edit.html.erb
@@ -1,19 +1,21 @@
 <%= render 'shared/error_messages', :object => f.object %>
+
 <% unless @source.work_id.nil? %>
-    <div>
+    <div class="control-group">
       <%= check_box_tag "source[work_id]", @source.work_id, true%>
-      work association
+      delete work association
     </div>
 <% end %>
 
-<div class="field">
-  <%= f.label :content %><br />
-  <%= f.text_area :content, :size=>"43x4" %>
+<div class="control-group">
+  <%= f.label :content %>
+  <%= f.text_area :content, :size=>"5x5" %>
 </div>
 
-<% for tag in current_user.tags %>
-    <div>
-      <%= check_box_tag "source[tag_ids][]", tag.id, source_tag?(tag)%>
-      <%= tag.name %>
-    </div>
-<% end %>
+<div class="control-group">
+  <%= f.label "Related tags" %>
+    <% for tag in current_user.tags %>
+          <%= check_box_tag "source[tag_ids][]", tag.id, source_tag?(tag)%>
+          <%= tag.name %>
+    <% end %>
+</div>
