--- a/app/views/sources/edit.html.erb
+++ b/app/views/sources/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Edit source</h1>
+<%= form_for(@source, :html => { :class => "well"}) do |f| %>
+    <fieldset>
 
-<div class="margin10">
-  <%= form_for(@source) do |f| %>
+      <legend>Please edit information</legend>
+
       <%= render 'fields_edit', :f => f %>
-      <div class="actions">
-        <%= f.submit "Update" %>
+
+      <div class="form-actions">
+        <%= f.submit "Update", :class => "btn btn-primary" %>
       </div>
-  <% end %>
-</div>
+
+    </fieldset>
+<% end %>
