--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,22 +46,9 @@
     <%= collection_select(:work, :category_ids, @user.categories, :id, :name, options = {:prompt => '--Category--'}, html_options = {:multiple => false, :size => 1, :class=>"span2"})%>
 
     <%= f.text_field :description, {:class =>"input-large",:placeholder=>"Activity description"} %>
+
     <%= f.submit "Add activity", :class=>"btn btn-primary" %>
 
 <% end %>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-
-        $("#work_category_ids").change(function () {
-            selected = $("#work_category_ids :selected");
-            // add hidden fields with selected value and label with category name
-            $("#work_category_ids").before( '<input type="hidden" name="work[category_ids][]" value="'+ selected.val() +'"><span class="label form_label">' + selected.text() + '</span>' );
-            // remove selected item
-            selected.remove();
-            // change text for first element
-            $("#work_category_ids :first").text("--One more category--");
-        });
-
-    });
-</script>
+<%= render('shared/work_categories_js') %>
