--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -2,7 +2,11 @@
     margin-bottom: 5px;
 }
 
-.form_label {
+.selected_category {
     margin-left: 1px;
     margin-right: 1px;
+}
+
+.selected_category:hover {
+    cursor: pointer;
 }
