--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -9,9 +9,8 @@
 
   <hr style="margin-top:0px;">
 
-  <h3>Title will be here</h3>
   <p>
-    <%= source.content %>    
+    <%= source.content.html_safe %>
   </p>
 
   <div class="pull-left">
