--- a/app/views/sources/_fields_edit.html.erb
+++ b/app/views/sources/_fields_edit.html.erb
@@ -8,7 +8,6 @@
 <% end %>
 
 <div class="control-group">
-  <%= f.label :content %>
   <%= f.text_area :content, :size=>"5x5" %>
 </div>
 
@@ -19,3 +18,5 @@
           <%= tag.name %>
     <% end %>
 </div>
+
+<%= render 'shared/sources_wysiwyg_js' %>
