add dynamic tags functionality

--- a/app/views/sources/_fields.html.erb
+++ b/app/views/sources/_fields.html.erb
@@ -2,12 +2,14 @@
 
 <%= f.text_area :content, :size=>"43x4" %>
 
+<!--
 <% for tag in current_user.tags %>
     <div>
       <%= check_box_tag "source[tag_ids][]", tag.id, source_tag?(tag)%>
       <%= tag.name %>
     </div>
 <% end %>
+-->
 
 <% if with_work? %>
     <%= hidden_field_tag("source[work_id]", params['work_id']) %>
@@ -15,14 +17,5 @@
 
 <%= render 'shared/sources_wysiwyg_js' %>
 
-<!-- for future development - autocomplete for tags
-<input id="tag_input" type="text" data-provide="typeahead" placeholder="Tag name">
-
-<script language="javascript">
-  $(document).ready( function (){
-      var tags = ['thouts', 'books', 'rails', 'notes'].sort();
-      $('#tag_input').typeahead({source: tags, items:5});
-  });
-</script>
--->
+<%= render 'shared/sources_tagit_js' %>
 
